--- a/Main.xaml
+++ b/Main.xaml
@@ -255,7 +255,7 @@
       <x:Boolean x:Key="ShouldExpandAll">True</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="901.132075471698,4888.754716981131" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="901.132075471698,4908.679245283019" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Double" Name="res" />
       <Variable x:TypeArguments="x:Double" Name="avg" />
@@ -270,7 +270,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Sequence sap:VirtualizedContainerService.HintSize="675.622641509434,2146.4150943396226" sap2010:WorkflowViewState.IdRef="Sequence_5">
+    <Sequence sap:VirtualizedContainerService.HintSize="675.622641509434,2157.2830188679245" sap2010:WorkflowViewState.IdRef="Sequence_5">
       <Sequence.Variables>
         <Variable x:TypeArguments="x:String" Name="filepath" />
       </Sequence.Variables>
@@ -279,8 +279,8 @@
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:SelectFile DisplayName="Browse For File" Filter="Excel|*.xlsx;*.xls;*.xlsm;*.xlsb" sap:VirtualizedContainerService.HintSize="641.2075471698113,166.64150943396226" sap2010:WorkflowViewState.IdRef="SelectFile_1" SelectedFile="[filepath]" />
-      <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" CreateNewFile="False" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="641.2075471698113,1888.3018867924527" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_1" ResizeWindow="None" SensitivityOperation="None" TemplatePath="C:\Users\NITHISH KRISHNA\Downloads\student_feedback.xlsx" UseTemplate="True" WorkbookPath="[filepath]">
+      <ui:SelectFile DisplayName="Browse For File" Filter="Excel|*.xlsx;*.xls;*.xlsm;*.xlsb" sap:VirtualizedContainerService.HintSize="641.2075471698113,168.45283018867923" sap2010:WorkflowViewState.IdRef="SelectFile_1" SelectedFile="[filepath]" />
+      <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" CreateNewFile="False" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="641.2075471698113,1897.3584905660375" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_1" ResizeWindow="None" SensitivityOperation="None" TemplatePath="C:\Users\NITHISH KRISHNA\Downloads\student_feedback.xlsx" UseTemplate="True" WorkbookPath="[filepath]">
         <ueab:ExcelApplicationCard.Body>
           <ActivityAction x:TypeArguments="ue:IWorkbookQuickHandle">
             <ActivityAction.Argument>
@@ -354,19 +354,19 @@
         </ueab:ExcelApplicationCard.Body>
       </ueab:ExcelApplicationCard>
     </Sequence>
-    <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" CreateNewFile="False" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="675.622641509434,967.2452830188679" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_5" ResizeWindow="None" SensitivityOperation="None" TemplatePath="C:\Users\NITHISH KRISHNA\Documents\Analysis Report.xlsx" UseTemplate="True" WorkbookPath="C:\Users\NITHISH KRISHNA\Documents\Analysis Report.xlsx">
+    <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" CreateNewFile="False" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="675.622641509434,852.2264150943396" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_5" ResizeWindow="None" SensitivityOperation="None" TemplatePath="C:\Users\NITHISH KRISHNA\Documents\Analysis Report.xlsx" UseTemplate="True" WorkbookPath="C:\Users\NITHISH KRISHNA\Documents\Analysis Report.xlsx">
       <ueab:ExcelApplicationCard.Body>
         <ActivityAction x:TypeArguments="ue:IWorkbookQuickHandle">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="ue:IWorkbookQuickHandle" Name="Excel" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="" sap:VirtualizedContainerService.HintSize="537.9622641509434,654.7924528301886" sap2010:WorkflowViewState.IdRef="Sequence_14">
+          <Sequence DisplayName="" sap:VirtualizedContainerService.HintSize="537.9622641509434,539.7735849056603" sap2010:WorkflowViewState.IdRef="Sequence_14">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ueab:ExcelForEachRowX DisplayName="For Each Excel Row" EmptyRowBehavior="Stop" HasHeaders="False" sap:VirtualizedContainerService.HintSize="503.5471698113207,595.0188679245283" sap2010:WorkflowViewState.IdRef="ExcelForEachRowX_3" Range="[Excel.Sheet(&quot;Sheet1&quot;).Range(&quot;B:B&quot;)]" SaveAfterEachRow="True">
+            <ueab:ExcelForEachRowX DisplayName="For Each Excel Row" EmptyRowBehavior="Stop" HasHeaders="False" sap:VirtualizedContainerService.HintSize="503.5471698113207,479.99999999999994" sap2010:WorkflowViewState.IdRef="ExcelForEachRowX_3" Range="[Excel.Sheet(&quot;Sheet1&quot;).Range(&quot;B:B&quot;)]" SaveAfterEachRow="True">
               <ueab:ExcelForEachRowX.Body>
                 <ActivityAction x:TypeArguments="ue:CurrentRowQuickHandle, x:Int32">
                   <ActivityAction.Argument1>
@@ -375,7 +375,7 @@
                   <ActivityAction.Argument2>
                     <DelegateInArgument x:TypeArguments="x:Int32" Name="CurrentIndex" />
                   </ActivityAction.Argument2>
-                  <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="469.1320754716981,390.33962264150944" sap2010:WorkflowViewState.IdRef="Sequence_15">
+                  <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="469.1320754716981,275.3207547169811" sap2010:WorkflowViewState.IdRef="Sequence_15">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -389,7 +389,7 @@
                         <InArgument x:TypeArguments="x:Double">[res+Convert.ToDouble(CurrentRow("B").ToString)]</InArgument>
                       </Assign.Value>
                     </Assign>
-                    <Assign sap:VirtualizedContainerService.HintSize="434.71698113207543,112.30188679245282" sap2010:WorkflowViewState.IdRef="Assign_8">
+                    <Assign sap:VirtualizedContainerService.HintSize="434.71698113207543,103.24528301886792" sap2010:WorkflowViewState.IdRef="Assign_8">
                       <Assign.To>
                         <OutArgument x:TypeArguments="x:Double">[row]</OutArgument>
                       </Assign.To>
@@ -397,7 +397,6 @@
                         <InArgument x:TypeArguments="x:Double">[row+1]</InArgument>
                       </Assign.Value>
                     </Assign>
-                    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="434.71698113207543,105.96226415094338" sap2010:WorkflowViewState.IdRef="MessageBox_9" Text="[res]" />
                   </Sequence>
                 </ActivityAction>
               </ueab:ExcelForEachRowX.Body>
@@ -406,7 +405,7 @@
         </ActivityAction>
       </ueab:ExcelApplicationCard.Body>
     </ueab:ExcelApplicationCard>
-    <Assign sap:VirtualizedContainerService.HintSize="675.622641509434,112.30188679245282" sap2010:WorkflowViewState.IdRef="Assign_9">
+    <Assign sap:VirtualizedContainerService.HintSize="675.622641509434,113.2075471698113" sap2010:WorkflowViewState.IdRef="Assign_9">
       <Assign.To>
         <OutArgument x:TypeArguments="x:Double">[avg]</OutArgument>
       </Assign.To>
@@ -414,7 +413,7 @@
         <InArgument x:TypeArguments="x:Double">[res/row]</InArgument>
       </Assign.Value>
     </Assign>
-    <Assign sap:VirtualizedContainerService.HintSize="675.622641509434,112.30188679245282" sap2010:WorkflowViewState.IdRef="Assign_10">
+    <Assign sap:VirtualizedContainerService.HintSize="675.622641509434,113.2075471698113" sap2010:WorkflowViewState.IdRef="Assign_10">
       <Assign.To>
         <OutArgument x:TypeArguments="x:Double">[starRating]</OutArgument>
       </Assign.To>
@@ -422,7 +421,7 @@
         <InArgument x:TypeArguments="x:Double">[avg*5]</InArgument>
       </Assign.Value>
     </Assign>
-    <Assign sap:VirtualizedContainerService.HintSize="675.622641509434,112.30188679245282" sap2010:WorkflowViewState.IdRef="Assign_11">
+    <Assign sap:VirtualizedContainerService.HintSize="675.622641509434,113.2075471698113" sap2010:WorkflowViewState.IdRef="Assign_11">
       <Assign.To>
         <OutArgument x:TypeArguments="x:Double">[roundedStar]</OutArgument>
       </Assign.To>
@@ -430,7 +429,7 @@
         <InArgument x:TypeArguments="x:Double">[Math.Round(starRating)]</InArgument>
       </Assign.Value>
     </Assign>
-    <Assign sap:VirtualizedContainerService.HintSize="675.622641509434,112.30188679245282" sap2010:WorkflowViewState.IdRef="Assign_12">
+    <Assign sap:VirtualizedContainerService.HintSize="675.622641509434,113.2075471698113" sap2010:WorkflowViewState.IdRef="Assign_12">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">[Star]</OutArgument>
       </Assign.To>
@@ -438,15 +437,15 @@
         <InArgument x:TypeArguments="x:String">[New String("★"c, CInt(roundedStar)) + New String("☆"c, 5 - CInt(roundedStar))]</InArgument>
       </Assign.Value>
     </Assign>
-    <ui:IfElseIfV2 Condition="[roundedStar &gt;= 4.5]" DisplayName="Else If" sap:VirtualizedContainerService.HintSize="675.622641509434,1197.2830188679245" sap2010:WorkflowViewState.IdRef="IfElseIfV2_2">
+    <ui:IfElseIfV2 Condition="[roundedStar &gt;= 4.5]" DisplayName="Else If" sap:VirtualizedContainerService.HintSize="675.622641509434,1200.9056603773583" sap2010:WorkflowViewState.IdRef="IfElseIfV2_2">
       <ui:IfElseIfV2.Else>
-        <Sequence DisplayName="Else" sap:VirtualizedContainerService.HintSize="469.1320754716981,163.01886792452828" sap2010:WorkflowViewState.IdRef="Sequence_21">
+        <Sequence DisplayName="Else" sap:VirtualizedContainerService.HintSize="469.1320754716981,163.9245283018868" sap2010:WorkflowViewState.IdRef="Sequence_21">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <Assign sap:VirtualizedContainerService.HintSize="434.71698113207543,103.24528301886792" sap2010:WorkflowViewState.IdRef="Assign_19">
+          <Assign sap:VirtualizedContainerService.HintSize="434.71698113207543,104.15094339622641" sap2010:WorkflowViewState.IdRef="Assign_19">
             <Assign.To>
               <OutArgument x:TypeArguments="x:String">[remarks]</OutArgument>
             </Assign.To>
@@ -479,13 +478,13 @@
           </ui:IfElseIfBlock>
           <ui:IfElseIfBlock BlockType="ElseIf" Condition="[roundedStar&gt;=2.5]" DisplayName="If else if block" sap2010:WorkflowViewState.IdRef="IfElseIfBlock_3">
             <ui:IfElseIfBlock.Then>
-              <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="469.1320754716981,163.01886792452828" sap2010:WorkflowViewState.IdRef="Sequence_25">
+              <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="469.1320754716981,163.9245283018868" sap2010:WorkflowViewState.IdRef="Sequence_25">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <Assign sap:VirtualizedContainerService.HintSize="434.71698113207543,103.24528301886792" sap2010:WorkflowViewState.IdRef="Assign_16">
+                <Assign sap:VirtualizedContainerService.HintSize="434.71698113207543,104.15094339622641" sap2010:WorkflowViewState.IdRef="Assign_16">
                   <Assign.To>
                     <OutArgument x:TypeArguments="x:String">[remarks]</OutArgument>
                   </Assign.To>
@@ -498,13 +497,13 @@
           </ui:IfElseIfBlock>
           <ui:IfElseIfBlock BlockType="ElseIf" Condition="[roundedStar&gt;=1.5]" DisplayName="If else if block" sap2010:WorkflowViewState.IdRef="IfElseIfBlock_6">
             <ui:IfElseIfBlock.Then>
-              <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="469.1320754716981,163.01886792452828" sap2010:WorkflowViewState.IdRef="Sequence_26">
+              <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="469.1320754716981,163.9245283018868" sap2010:WorkflowViewState.IdRef="Sequence_26">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <Assign sap:VirtualizedContainerService.HintSize="434.71698113207543,103.24528301886792" sap2010:WorkflowViewState.IdRef="Assign_18">
+                <Assign sap:VirtualizedContainerService.HintSize="434.71698113207543,104.15094339622641" sap2010:WorkflowViewState.IdRef="Assign_18">
                   <Assign.To>
                     <OutArgument x:TypeArguments="x:String">[remarks]</OutArgument>
                   </Assign.To>
@@ -535,6 +534,7 @@
         </Sequence>
       </ui:IfElseIfV2.Then>
     </ui:IfElseIfV2>
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="675.622641509434,105.96226415094338" sap2010:WorkflowViewState.IdRef="MessageBox_7" Text="[&quot;Your Ratings: &quot;+Star.ToString+vbCrLf+remarks]" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="675.622641509434,115.92452830188678" sap2010:WorkflowViewState.IdRef="MessageBox_7" Text="[&quot;Your Ratings: &quot;+Star.ToString+vbCrLf+remarks]" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="675.622641509434,106.86792452830188" sap2010:WorkflowViewState.IdRef="MessageBox_8" Text="[&quot;Done&quot;]" />
   </Sequence>
 </Activity>
